import java.net.URI

plugins {
	java
	`maven-publish`
	idea

	alias(libs.plugins.blossom)
	alias(libs.plugins.spotless)
	alias(libs.plugins.shadow)
}

val projectJavaVersion = 17

group = "org.quiltmc"
val env = System.getenv()
version = if (env["SNAPSHOTS_URL"] != null) {
	"0-SNAPSHOT"
} else if (env["VERSION"] != null) {
	env["VERSION"]!!
} else {
	"DEVELOPMENT"
}

base {
	archivesName.set(project.name)
}

repositories {
	mavenCentral()

	maven("https://maven.quiltmc.org/repository/release/") {
		name = "QuiltMC Releases"
	}
}

sourceSets {
	create("java8") {
		blossom {
			javaSources {
				property("minimum_java_version", projectJavaVersion.toString())
			}
		}
	}
	main {
		compileClasspath += sourceSets["java8"].output
	}
}

dependencies {
	compileOnly(libs.jetbrains.annotations)

	implementation(libs.gson)
	implementation(libs.bouncycastle)
}

spotless {
	java {
		target("src/*/java*/**/*.java*")
		// Use comma separator for openjdk like license headers
		licenseHeaderFile(project.file("codeformat/HEADER")).yearSeparator(", ")
	}
}

tasks.compileJava {
	options.release.set(projectJavaVersion)
}

tasks.getByName("compileJava8Java", JavaCompile::class) {
	options.release.set(8)
}
java {
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(projectJavaVersion))
	}
}

tasks.jar.get().dependsOn(tasks["compileJava8Java"])
tasks.jar {
	manifest {
		attributes["Implementation-Title"] = "Quilt-Installer"
		attributes["Implementation-Version"] = project.version
		attributes["Multi-Release"] = true
		attributes["Built-On-Java"] = "${System.getProperty("java.vm.version")} (${System.getProperty("java.vm.vendor")})"

		attributes["Main-Class"] = "org.quiltmc.installer.Main"
		attributes["Quilt-Installer-Required-Java-Version"] = projectJavaVersion;
	}
}

tasks.shadowJar {
//	minimize()

	enableAutoRelocation = true
	relocationPrefix = "org.quiltmc.installer._lib"

	dependencies {
		exclude(dependency("org.jetbrains:annotations:.*"))
		exclude(dependency("com.google.errorprone:.*"))
	}
	exclude("META-INF/**")
	excludes.remove(
		"module-info.class"
	)
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE

	// Compiler does not know which set method we are targeting with null value
	val classifier: String? = null;
	archiveClassifier.set(classifier)
	from(sourceSets["java8"].output)
}

tasks.assemble {
	dependsOn(tasks.shadowJar)
}

val copyForNative = tasks.register<Copy>("copyForNative") {
	dependsOn(tasks.shadowJar)
	dependsOn(tasks.jar)
	from(tasks.shadowJar)
	into(file("build"))

	rename {
		return@rename if (it.contains("quilt-installer")) {
			"native-quilt-installer.jar"
		} else {
			it
		}
	}
}


publishing {
	publications {
		if (env["NATIVE_TARGET"] == null) {
			create<MavenPublication>("mavenJava") {
				from(components["java"])
			}
		} else {
			create<MavenPublication>("mavenNatives") {
				groupId = "org.quiltmc.quilt-installer-native-bootstrap"
				artifactId = env["NATIVE_TARGET_ARTIFACT_ID"]!!

				artifact {
					file("$projectDir/native/target/${env["NATIVE_TARGET"]!!}/release/quilt-installer${env["NATIVE_TARGET_EXT"]!!}")
				}
			}
		}
	}

	repositories {
		if (env["MAVEN_URL"] != null) {
			repositories.maven {
				url = URI(env["MAVEN_URL"]!!)

				credentials {
					username = env["MAVEN_USERNAME"]
					password = env["MAVEN_PASSWORD"]
				}
			}
		} else if (env["SNAPSHOTS_URL"] != null) {
			repositories.maven {
				url = URI(env["SNAPSHOTS_URL"]!!)

				credentials {
					username = env["SNAPSHOTS_USERNAME"]
					password = env["SNAPSHOTS_PASSWORD"]
				}
			}
		}
	}
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
	module {
		isDownloadSources = true
		isDownloadJavadoc = true
	}
}
